src/asmjit/parsers/basic/BasicParser.py
# Generated from compiler/grammar/BasicParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BasicParser ( Parser ):

    grammarFileName = "BasicParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'<='", "'>='", "<INVALID>", "'='", "'<'", 
                     "'>'", "'+'", "'-'", "'*'", "'/'", "'\\'", "'^'", "'&'", 
                     "'('", "')'", "','", "';'", "':'" ]

    symbolicNames = [ "<INVALID>", "REM_COMMENT", "APOSTROPHE_COMMENT", 
                      "AND", "AS", "BOOLEAN", "BYREF", "BYVAL", "CALL", 
                      "CONST", "DIM", "DO", "DOUBLE", "DOWNTO", "ELSE", 
                      "ELSEIF", "END", "EXIT", "FALSE", "FOR", "FUNCTION", 
                      "GOSUB", "GOTO", "IF", "INPUT", "INTEGER_KW", "LABEL", 
                      "LET", "LONG", "LOOP", "MOD", "NEXT", "NOT", "OR", 
                      "PRINT", "RETURN", "SINGLE", "STEP", "STOP", "STRING_KW", 
                      "SUB", "THEN", "TO", "TRUE", "UNTIL", "WEND", "WHILE", 
                      "XOR", "HEX_LITERAL", "BINARY_LITERAL", "FLOAT_LITERAL", 
                      "INTEGER_LITERAL", "STRING_LITERAL", "LE", "GE", "NE", 
                      "EQ", "LT", "GT", "PLUS", "MINUS", "STAR", "SLASH", 
                      "INTDIV", "CARET", "AMP", "LPAREN", "RPAREN", "COMMA", 
                      "SEMI", "COLON", "IDENT", "NEWLINE", "WS" ]

    RULE_program = 0
    RULE_topLevelItem = 1
    RULE_separators = 2
    RULE_separator = 3
    RULE_subDeclaration = 4
    RULE_functionDeclaration = 5
    RULE_parameterList = 6
    RULE_parameterDeclList = 7
    RULE_parameterDecl = 8
    RULE_statement = 9
    RULE_lineNumber = 10
    RULE_statementCore = 11
    RULE_statementBlock = 12
    RULE_inlineStatement = 13
    RULE_assignmentStatement = 14
    RULE_constStatement = 15
    RULE_dimStatement = 16
    RULE_variableDecl = 17
    RULE_arrayBounds = 18
    RULE_lvalue = 19
    RULE_printStatement = 20
    RULE_printList = 21
    RULE_inputStatement = 22
    RULE_ifStatement = 23
    RULE_forStatement = 24
    RULE_whileStatement = 25
    RULE_doLoopStatement = 26
    RULE_gotoStatement = 27
    RULE_gosubStatement = 28
    RULE_jumpTarget = 29
    RULE_returnStatement = 30
    RULE_callStatement = 31
    RULE_exitStatement = 32
    RULE_labelStatement = 33
    RULE_stopStatement = 34
    RULE_typeName = 35
    RULE_expression = 36
    RULE_orExpression = 37
    RULE_xorExpression = 38
    RULE_andExpression = 39
    RULE_notExpression = 40
    RULE_comparisonExpression = 41
    RULE_additiveExpression = 42
    RULE_multiplicativeExpression = 43
    RULE_powerExpression = 44
    RULE_unaryExpression = 45
    RULE_primaryExpression = 46
    RULE_argumentList = 47
    RULE_literal = 48

    ruleNames =  [ "program", "topLevelItem", "separators", "separator", 
                   "subDeclaration", "functionDeclaration", "parameterList", 
                   "parameterDeclList", "parameterDecl", "statement", "lineNumber", 
                   "statementCore", "statementBlock", "inlineStatement", 
                   "assignmentStatement", "constStatement", "dimStatement", 
                   "variableDecl", "arrayBounds", "lvalue", "printStatement", 
                   "printList", "inputStatement", "ifStatement", "forStatement", 
                   "whileStatement", "doLoopStatement", "gotoStatement", 
                   "gosubStatement", "jumpTarget", "returnStatement", "callStatement", 
                   "exitStatement", "labelStatement", "stopStatement", "typeName", 
                   "expression", "orExpression", "xorExpression", "andExpression", 
                   "notExpression", "comparisonExpression", "additiveExpression", 
                   "multiplicativeExpression", "powerExpression", "unaryExpression", 
                   "primaryExpression", "argumentList", "literal" ]

    EOF = Token.EOF
    REM_COMMENT=1
    APOSTROPHE_COMMENT=2
    AND=3
    AS=4
    BOOLEAN=5
    BYREF=6
    BYVAL=7
    CALL=8
    CONST=9
    DIM=10
    DO=11
    DOUBLE=12
    DOWNTO=13
    ELSE=14
    ELSEIF=15
    END=16
    EXIT=17
    FALSE=18
    FOR=19
    FUNCTION=20
    GOSUB=21
    GOTO=22
    IF=23
    INPUT=24
    INTEGER_KW=25
    LABEL=26
    LET=27
    LONG=28
    LOOP=29
    MOD=30
    NEXT=31
    NOT=32
    OR=33
    PRINT=34
    RETURN=35
    SINGLE=36
    STEP=37
    STOP=38
    STRING_KW=39
    SUB=40
    THEN=41
    TO=42
    TRUE=43
    UNTIL=44
    WEND=45
    WHILE=46
    XOR=47
    HEX_LITERAL=48
    BINARY_LITERAL=49
    FLOAT_LITERAL=50
    INTEGER_LITERAL=51
    STRING_LITERAL=52
    LE=53
    GE=54
    NE=55
    EQ=56
    LT=57
    GT=58
    PLUS=59
    MINUS=60
    STAR=61
    SLASH=62
    INTDIV=63
    CARET=64
    AMP=65
    LPAREN=66
    RPAREN=67
    COMMA=68
    SEMI=69
    COLON=70
    IDENT=71
    NEWLINE=72
    WS=73

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BasicParser.EOF, 0)

        def separators(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.SeparatorsContext)
            else:
                return self.getTypedRuleContext(BasicParser.SeparatorsContext,i)


        def topLevelItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.TopLevelItemContext)
            else:
                return self.getTypedRuleContext(BasicParser.TopLevelItemContext,i)


        def getRuleIndex(self):
            return BasicParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BasicParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 98
                    self.separators() 
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 8)) & ~0x3f) == 0 and ((1 << (_la - 8)) & -9223362960312894961) != 0):
                self.state = 104
                self.topLevelItem()


            self.state = 116
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 108 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 107
                        self.separators()
                        self.state = 110 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==70 or _la==72):
                            break

                    self.state = 112
                    self.topLevelItem() 
                self.state = 118
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==70 or _la==72:
                self.state = 119
                self.separators()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 125
            self.match(BasicParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subDeclaration(self):
            return self.getTypedRuleContext(BasicParser.SubDeclarationContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(BasicParser.FunctionDeclarationContext,0)


        def statement(self):
            return self.getTypedRuleContext(BasicParser.StatementContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_topLevelItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLevelItem" ):
                listener.enterTopLevelItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLevelItem" ):
                listener.exitTopLevelItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopLevelItem" ):
                return visitor.visitTopLevelItem(self)
            else:
                return visitor.visitChildren(self)




    def topLevelItem(self):

        localctx = BasicParser.TopLevelItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topLevelItem)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [40]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.subDeclaration()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.functionDeclaration()
                pass
            elif token in [8, 9, 10, 11, 17, 19, 21, 22, 23, 24, 26, 27, 34, 35, 38, 46, 51, 71]:
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeparatorsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def separator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.SeparatorContext)
            else:
                return self.getTypedRuleContext(BasicParser.SeparatorContext,i)


        def getRuleIndex(self):
            return BasicParser.RULE_separators

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeparators" ):
                listener.enterSeparators(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeparators" ):
                listener.exitSeparators(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeparators" ):
                return visitor.visitSeparators(self)
            else:
                return visitor.visitChildren(self)




    def separators(self):

        localctx = BasicParser.SeparatorsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_separators)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 132
                    self.separator()

                else:
                    raise NoViableAltException(self)
                self.state = 135 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeparatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(BasicParser.NEWLINE, 0)

        def COLON(self):
            return self.getToken(BasicParser.COLON, 0)

        def getRuleIndex(self):
            return BasicParser.RULE_separator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeparator" ):
                listener.enterSeparator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeparator" ):
                listener.exitSeparator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeparator" ):
                return visitor.visitSeparator(self)
            else:
                return visitor.visitChildren(self)




    def separator(self):

        localctx = BasicParser.SeparatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_separator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            _la = self._input.LA(1)
            if not(_la==70 or _la==72):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUB(self, i:int=None):
            if i is None:
                return self.getTokens(BasicParser.SUB)
            else:
                return self.getToken(BasicParser.SUB, i)

        def IDENT(self):
            return self.getToken(BasicParser.IDENT, 0)

        def separators(self):
            return self.getTypedRuleContext(BasicParser.SeparatorsContext,0)


        def statementBlock(self):
            return self.getTypedRuleContext(BasicParser.StatementBlockContext,0)


        def END(self):
            return self.getToken(BasicParser.END, 0)

        def parameterList(self):
            return self.getTypedRuleContext(BasicParser.ParameterListContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_subDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubDeclaration" ):
                listener.enterSubDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubDeclaration" ):
                listener.exitSubDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubDeclaration" ):
                return visitor.visitSubDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def subDeclaration(self):

        localctx = BasicParser.SubDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_subDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(BasicParser.SUB)
            self.state = 140
            self.match(BasicParser.IDENT)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==66:
                self.state = 141
                self.parameterList()


            self.state = 144
            self.separators()
            self.state = 145
            self.statementBlock()
            self.state = 146
            self.match(BasicParser.END)
            self.state = 147
            self.match(BasicParser.SUB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self, i:int=None):
            if i is None:
                return self.getTokens(BasicParser.FUNCTION)
            else:
                return self.getToken(BasicParser.FUNCTION, i)

        def IDENT(self):
            return self.getToken(BasicParser.IDENT, 0)

        def separators(self):
            return self.getTypedRuleContext(BasicParser.SeparatorsContext,0)


        def statementBlock(self):
            return self.getTypedRuleContext(BasicParser.StatementBlockContext,0)


        def END(self):
            return self.getToken(BasicParser.END, 0)

        def parameterList(self):
            return self.getTypedRuleContext(BasicParser.ParameterListContext,0)


        def AS(self):
            return self.getToken(BasicParser.AS, 0)

        def typeName(self):
            return self.getTypedRuleContext(BasicParser.TypeNameContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDeclaration" ):
                return visitor.visitFunctionDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def functionDeclaration(self):

        localctx = BasicParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_functionDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(BasicParser.FUNCTION)
            self.state = 150
            self.match(BasicParser.IDENT)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==66:
                self.state = 151
                self.parameterList()


            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 154
                self.match(BasicParser.AS)
                self.state = 155
                self.typeName()


            self.state = 158
            self.separators()
            self.state = 159
            self.statementBlock()
            self.state = 160
            self.match(BasicParser.END)
            self.state = 161
            self.match(BasicParser.FUNCTION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(BasicParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(BasicParser.RPAREN, 0)

        def parameterDeclList(self):
            return self.getTypedRuleContext(BasicParser.ParameterDeclListContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = BasicParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(BasicParser.LPAREN)
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6 or _la==7 or _la==71:
                self.state = 164
                self.parameterDeclList()


            self.state = 167
            self.match(BasicParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterDeclListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameterDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.ParameterDeclContext)
            else:
                return self.getTypedRuleContext(BasicParser.ParameterDeclContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BasicParser.COMMA)
            else:
                return self.getToken(BasicParser.COMMA, i)

        def getRuleIndex(self):
            return BasicParser.RULE_parameterDeclList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterDeclList" ):
                listener.enterParameterDeclList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterDeclList" ):
                listener.exitParameterDeclList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterDeclList" ):
                return visitor.visitParameterDeclList(self)
            else:
                return visitor.visitChildren(self)




    def parameterDeclList(self):

        localctx = BasicParser.ParameterDeclListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameterDeclList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.parameterDecl()
            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==68:
                self.state = 170
                self.match(BasicParser.COMMA)
                self.state = 171
                self.parameterDecl()
                self.state = 176
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(BasicParser.IDENT, 0)

        def AS(self):
            return self.getToken(BasicParser.AS, 0)

        def typeName(self):
            return self.getTypedRuleContext(BasicParser.TypeNameContext,0)


        def BYVAL(self):
            return self.getToken(BasicParser.BYVAL, 0)

        def BYREF(self):
            return self.getToken(BasicParser.BYREF, 0)

        def getRuleIndex(self):
            return BasicParser.RULE_parameterDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterDecl" ):
                listener.enterParameterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterDecl" ):
                listener.exitParameterDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterDecl" ):
                return visitor.visitParameterDecl(self)
            else:
                return visitor.visitChildren(self)




    def parameterDecl(self):

        localctx = BasicParser.ParameterDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameterDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6 or _la==7:
                self.state = 177
                _la = self._input.LA(1)
                if not(_la==6 or _la==7):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 180
            self.match(BasicParser.IDENT)
            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 181
                self.match(BasicParser.AS)
                self.state = 182
                self.typeName()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementCore(self):
            return self.getTypedRuleContext(BasicParser.StatementCoreContext,0)


        def lineNumber(self):
            return self.getTypedRuleContext(BasicParser.LineNumberContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):
